--- a/FFTSSharp/FFTSSharp.csproj
+++ b/FFTSSharp/FFTSSharp.csproj
@@ -14,6 +14,8 @@
     <Platforms>AnyCPU;x64</Platforms>
     <Product>FFTSSharp</Product>
     <PackageId>PetterPet.FFTSSharp</PackageId>
+    <PackageIcon>logo.png</PackageIcon>
+    <PackageIconUrl />
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -41,6 +43,10 @@
 		<None Include="ffts-dlls\**">
 			<Pack>True</Pack>
 			<PackagePath>output\ffts-dlls\</PackagePath>
+		</None>
+		<None Include="logo.png">
+		  <Pack>True</Pack>
+		  <PackagePath></PackagePath>
 		</None>
 	</ItemGroup>
 
