--- a/FFTSSharpLegacy/FFTSSharpLegacy.csproj
+++ b/FFTSSharpLegacy/FFTSSharpLegacy.csproj
@@ -48,6 +48,9 @@
     <LangVersion>7.3</LangVersion>
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>logo.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="LinqBridge, Version=1.3.0.0, Culture=neutral, PublicKeyToken=c2b14eb747628076, processorArchitecture=MSIL">
       <HintPath>..\packages\LinqBridge.1.3.0\lib\net20\LinqBridge.dll</HintPath>
@@ -80,6 +83,7 @@
     <Content Include="ffts-dlls\fftsx86sse2.dll" />
     <Content Include="ffts-dlls\fftsx86sse3.dll" />
     <Content Include="License.txt" />
+    <Content Include="logo.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
