Added a new package for proper DLLs copying

--- a/FFTBenchmark/FFTBenchmark.csproj
+++ b/FFTBenchmark/FFTBenchmark.csproj
@@ -55,6 +55,9 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FFTSSharp, Version=0.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\PetterPet.FFTSSharp.0.0.1\lib\netstandard2.0\FFTSSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -71,12 +74,6 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\FFTSSharp\FFTSSharp.csproj">
-      <Project>{e61979f9-9050-437d-9658-550865f1ea16}</Project>
-      <Name>FFTSSharp</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
