--- a/FFTSSharpLegacy/packages.config
+++ b/FFTSSharpLegacy/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Baseclass.Contrib.Nuget.Output" version="2.4.3" targetFramework="net20" />
   <package id="LinqBridge" version="1.3.0" targetFramework="net20" />
 </packages>
