--- a/FFTSSharpLegacy/FFTSSharpLegacy.csproj
+++ b/FFTSSharpLegacy/FFTSSharpLegacy.csproj
@@ -1,98 +1,53 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C1F3158E-41DF-45BE-B792-DFFFD872CCC4}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FFTSSharpLegacy</RootNamespace>
-    <AssemblyName>FFTSSharpLegacy</AssemblyName>
-    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
+    <TargetFrameworks>
+		netstandard1.3;
+		netstandard1.4;
+		netstandard1.5;
+		netstandard1.6;
+		net20;
+		net35;
+		netcoreapp1.0;
+		netcoreapp1.1
+	</TargetFrameworks>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>PetterPet.FFTSSharpLegacy</PackageId>
+    <Authors>PetterPet</Authors>
+    <Company>PetterPet</Company>
+    <Product>FFTSSharpLegacy</Product>
+    <Version>0.0.2</Version>
+    <Description>A basic C# wrapper for FFTS (The Fastest Fourier Transform in the South)</Description>
+    <Copyright>Copyright © PetterPet 2021</Copyright>
+    <PackageLicenseFile>License.txt</PackageLicenseFile>
+    <RepositoryUrl>https://github.com/PetterPet01/FFTSSharp</RepositoryUrl>
+    <RepositoryType>Github</RepositoryType>
+    <PackageIcon>logo.png</PackageIcon>
+    <PackageIconUrl />
+    <PackageTags>Audio Wrapper CSharp DSP FFT FFT-library</PackageTags>
+    <PackageReleaseNotes>Compatibility update and bug fixes</PackageReleaseNotes>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <LangVersion>7.3</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>bin\x64\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <LangVersion>7.3</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-  </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationIcon>logo.ico</ApplicationIcon>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="LinqBridge, Version=1.3.0.0, Culture=neutral, PublicKeyToken=c2b14eb747628076, processorArchitecture=MSIL">
-      <HintPath>..\packages\LinqBridge.1.3.0\lib\net20\LinqBridge.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard1.3'&#xD;&#xA;			 OR '$(TargetFramework)' == 'netstandard1.4'&#xD;&#xA;			 OR '$(TargetFramework)' == 'netstandard1.5'&#xD;&#xA;			 OR '$(TargetFramework)' == 'netstandard1.6'&#xD;&#xA;			 OR '$(TargetFramework)' == 'netcoreapp1.0'&#xD;&#xA;			 OR '$(TargetFramework)' == 'netcoreapp1.1'">
+    <PackageReference Include="System.Reflection.Emit">
+      <Version>4.6.0</Version>
+    </PackageReference>
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="DllImportX\DllImportXAttribute.cs" />
-    <Compile Include="DllImportX\DllImportXFactory.cs" />
-    <Compile Include="DllImportX\DllImportXFilter.cs" />
-    <Compile Include="DllImportX\DllImportXParameters.cs" />
-    <Compile Include="DllImportX\namespace.cs" />
-    <Compile Include="DllImportX\ReflectionExtensions.cs" />
-    <Compile Include="FFTS.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net20'">
+    <PackageReference Include="LinqBridge">
+      <Version>1.3.0</Version>
+    </PackageReference>
   </ItemGroup>
+
   <ItemGroup>
-    <None Include="DllImportX\DllImportX.csproj" />
-    <None Include="packages.config" />
+    <None Include="License.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+    <None Include="logo.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="ffts-dlls\fftsx64nonsse.dll" />
-    <Content Include="ffts-dlls\fftsx64sse.dll" />
-    <Content Include="ffts-dlls\fftsx64sse2.dll" />
-    <Content Include="ffts-dlls\fftsx64sse3.dll" />
-    <Content Include="ffts-dlls\fftsx86nonsse.dll" />
-    <Content Include="ffts-dlls\fftsx86sse.dll" />
-    <Content Include="ffts-dlls\fftsx86sse2.dll" />
-    <Content Include="ffts-dlls\fftsx86sse3.dll" />
-    <Content Include="License.txt" />
-    <Content Include="logo.ico" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Baseclass.Contrib.Nuget.Output.2.4.3\build\Baseclass.Contrib.Nuget.Output.targets" Condition="Exists('..\packages\Baseclass.Contrib.Nuget.Output.2.4.3\build\Baseclass.Contrib.Nuget.Output.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Baseclass.Contrib.Nuget.Output.2.4.3\build\Baseclass.Contrib.Nuget.Output.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Baseclass.Contrib.Nuget.Output.2.4.3\build\Baseclass.Contrib.Nuget.Output.targets'))" />
-  </Target>
 </Project>
